src/test/compile-fail/bad-main.rs
// error-pattern:wrong type in main function

fn main(x: int) { }